Fix QuorumMembersListItem overflow

--- a/packages/frontend/src/components/blocks/quorum/QuorumMembersListItem.scss
+++ b/packages/frontend/src/components/blocks/quorum/QuorumMembersListItem.scss
@@ -14,5 +14,9 @@
   &__Column {
     @include qm.Column();
     line-height: 0.75rem;
+
+    &--ProtxHash {
+      overflow: hidden;
+    }
   }
 }
